--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://luchomorla.github.io/ReactShop/",
   "name": "react-shop",
   "version": "1.0.0",
   "description": "react eshop",
