--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://luchomorla.github.io/ReactShop/",
   "name": "react-shop",
   "version": "1.0.0",
   "description": "react eshop",
@@ -7,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "build": "webpack --mode production",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build": "webpack --mode production"
   },
   "keywords": [
     "React",
@@ -24,7 +21,6 @@
     "@babel/preset-react": "^7.16.7",
     "axios": "^0.25.0",
     "babel-loader": "^8.2.3",
-    "gh-pages": "^3.2.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "npm-check-updates": "^12.2.1",
